test data initializer and surrounding config

--- a/exocortex/Web.Release.config
+++ b/exocortex/Web.Release.config
@@ -28,4 +28,11 @@
       </customErrors>
     -->
   </system.web>
+  <entityFramework>
+    <contexts>
+      <context type="exocortex.Data.ExocortexDbContext, exocortex" xdt:Locator="Match(type)">
+        <databaseInitializer type="exocortex.Data.TestDataInitializer, exocortex" xdt:Locator="Match(type)" xdt:Transform="Remove"/>
+      </context>
+    </contexts>
+  </entityFramework>
 </configuration>
