--- a/exocortex/Web.config
+++ b/exocortex/Web.config
@@ -82,6 +82,11 @@
   </runtime>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
+    <contexts>
+      <context type="exocortex.Data.ExocortexDbContext, exocortex">
+        <databaseInitializer type="exocortex.Data.TestDataInitializer, exocortex"/>
+      </context>
+    </contexts>
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
