entries service ready

--- a/exocortex/Web.config
+++ b/exocortex/Web.config
@@ -12,7 +12,9 @@
     </sectionGroup>
   </configSections>
   <connectionStrings>
-    <add name="exocortex" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-exocortex-20160209072551.mdf;Initial Catalog=exocortex;Integrated Security=True"
+    <add name="exocortexIdentity" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=exocortexIdentity;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
+    <add name="exocortexData" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=exocortexData;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
@@ -99,8 +101,11 @@
   </system.codedom>
   <applicationSettings>
     <exocortex.Properties.Settings>
-      <setting name="connectionStringName" serializeAs="String">
-        <value>exocortex</value>
+      <setting name="dataConnectionStringName" serializeAs="String">
+        <value>exocortexData</value>
+      </setting>
+      <setting name="identityConnectionStringName" serializeAs="String">
+        <value>exocortexIdentity</value>
       </setting>
     </exocortex.Properties.Settings>
   </applicationSettings>
