--- a/exocortex/Properties/Settings.settings
+++ b/exocortex/Properties/Settings.settings
@@ -2,8 +2,11 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="exocortex.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="connectionStringName" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">exocortex</Value>
+    <Setting Name="dataConnectionStringName" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">exocortexData</Value>
+    </Setting>
+    <Setting Name="identityConnectionStringName" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">exocortexIdentity</Value>
     </Setting>
   </Settings>
 </SettingsFile>
